# ERPNext_stock_manager_tg_integration

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
stock_manager_bot/: __init__.py  bot.py  config.py  delivery.py  purchase.py  storage.py
